--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jetty.version>6.1.4</jetty.version>
+		<jetty.version>6.1.26</jetty.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<slf4j.version>1.5.10</slf4j.version>
-		<java.version>1.5</java.version>
+		<java.version>1.7</java.version>
 		<junit.version>4.8.2</junit.version>
 	</properties>
 
@@ -170,13 +170,17 @@
 					<groupId>com.sun.jmx</groupId>
 					<artifactId>jmxri</artifactId>
 				</exclusion>
+				<exclusion>
+                <groupId>javax.jms</groupId>
+                <artifactId>jms</artifactId>
+                </exclusion>
 			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
 
 
 		<dependency>
-			<groupId>jstl</groupId>
+			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.1.2</version>
 			<type>jar</type>
@@ -203,28 +207,22 @@
 	</repositories>
 
 	<build>
-		<finalName>springmvc</finalName>
 		<plugins>
-
-			<!-- Facilitates downloading source and javadoc in Eclipse -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<wtpversion>2.0</wtpversion>
-					<downloadSources>true</downloadSources>
-					<downloadJavadocs>true</downloadJavadocs>
-				</configuration>
-			</plugin>
 
 			<!-- Plugin to run and test through maven -->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.25</version>
+				<version>${jetty.version}</version>
 				<configuration>
-					<scanIntervalSeconds>3</scanIntervalSeconds>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<contextPath>/spring</contextPath>
+					<connectors>
+	                    <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+	                      <port>8081</port>
+	                      <maxIdleTime>60000</maxIdleTime>
+	                    </connector>
+                    </connectors>
 				</configuration>
 			</plugin>
 
@@ -232,7 +230,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
