--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.lvls</groupId>
+	<groupId>com.dredom</groupId>
 	<artifactId>springmvc</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>springmvc</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jetty.version>6.1.26</jetty.version>
-		<spring.version>3.0.5.RELEASE</spring.version>
+		<spring.version>4.1.7.RELEASE</spring.version>
 		<slf4j.version>1.5.10</slf4j.version>
-		<java.version>1.7</java.version>
-		<junit.version>4.8.2</junit.version>
+		<java.version>1.8</java.version>
+		<junit.version>4.12</junit.version>
 	</properties>
 
 	<dependencies>
@@ -71,6 +70,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context-support</artifactId>
+    <version>${spring.version}</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -126,9 +130,9 @@
 			<version>1.7</version>
 		</dependency>
 		<dependency>
-		  <groupId>velocity-tools</groupId>
-		  <artifactId>velocity-tools-generic</artifactId>
-		  <version>2.0-beta1</version>
+		    <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+            <version>2.0</version>
 		</dependency>
 
 		<!-- Test Dependencies -->
@@ -188,23 +192,7 @@
 		</dependency>
 	</dependencies>
 
-	<repositories>
-		<!-- JBoss Repository used for Java EE 6 pieces -->
-		<repository>
-			<id>repository.jboss.org</id>
-			<name>JBoss Repository</name>
-			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
-		</repository>
 
-		<repository>
-			<id>org.springframework.maven.milestone</id>
-			<name>Spring Maven Milestone Repository</name>
-			<url>http://maven.springframework.org/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
 
 	<build>
 		<plugins>
