--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.dredom</groupId>
 	<artifactId>springmvc</artifactId>
@@ -7,16 +8,15 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jetty.version>6.1.26</jetty.version>
-		<spring.version>4.1.7.RELEASE</spring.version>
-		<slf4j.version>1.5.10</slf4j.version>
-		<java.version>1.8</java.version>
-		<junit.version>4.12</junit.version>
+	   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	   <jetty.version>6.1.26</jetty.version>
+	   <spring.version>4.1.7.RELEASE</spring.version>
+	   <slf4j.version>1.5.10</slf4j.version>
+	   <java.version>1.8</java.version>
+       <junit.version>4.12</junit.version>
 	</properties>
 
 	<dependencies>
-
 
 		<!-- Bean Validation Dependencies -->
 
@@ -44,9 +44,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
+		    <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb-j5</artifactId>
+            <version>2.2.4</version>
 		</dependency>
 
 		<dependency>
@@ -70,11 +70,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-context-support</artifactId>
-    <version>${spring.version}</version>
-</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>${spring.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -175,8 +175,8 @@
 					<artifactId>jmxri</artifactId>
 				</exclusion>
 				<exclusion>
-                <groupId>javax.jms</groupId>
-                <artifactId>jms</artifactId>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
                 </exclusion>
 			</exclusions>
 			<scope>runtime</scope>
