--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+        <!-- Browser/Form Factor detection -->
+        <dependency>
+            <groupId>com.github.autograder</groupId>
+            <artifactId>mobile-esp</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
